testsuite/tests/typing-recmod/t14bad.compilers.reference
File "t14bad.ml", line 24, characters 2-35:
24 |   and U' : S with type t = U'.t = U
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The type abbreviation U'.t is cyclic:
         U'.t = U'.t
